--- a/src/Antifraud.API/Antifraud.API/appsettings.json
+++ b/src/Antifraud.API/Antifraud.API/appsettings.json
@@ -1,8 +1,14 @@
 {
   "AppSettings": {
-    "DBConnection": "Host=postgres;Port=5432;Username=postgres;Password=postgres;Database=postgres",
-    "BootstrapServers": "kafka:29092"
-  }
+    "DBConnection": "Host=postgres;Port=5432;Username=postgres;Password=postgres;Database=postgres"
+  },
+  "KafkaSettings": {
+    "BootstrapServers": "kafka:29092",
+    "GroupId": "transaction-consumer-group",
+    "TransactionsTopic": "transactions",
+    "ConfirmationTopic": "transactions-confirmed",
+    "AutoOffsetReset": "Earliest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
