--- a/src/Antifraud.API/Antifraud.Dto/Antifraud.Dto.csproj
+++ b/src/Antifraud.API/Antifraud.Dto/Antifraud.Dto.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Antifraud.Common\Antifraud.Common.csproj" />
+  </ItemGroup>
+
 </Project>
