--- a/src/Antifraud.API/Transaction.API/appsettings.json
+++ b/src/Antifraud.API/Transaction.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "AppSettings": {
+    "DBConnection": "Host=postgres;Port=5432;Username=postgres;Password=postgres;Database=postgres"
+  },
+  "KafkaSettings": {
+    "BootstrapServers": "localhost:9092",
+    "GroupId": "transaction-consumer-group",
+    "TransactionsTopic": "transactions",
+    "ConfirmationTopic": "transactions-confirmed",
+    "AutoOffsetReset": "Earliest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
