--- a/src/Antifraud.API/Antifraud.API/Antifraud.API.csproj
+++ b/src/Antifraud.API/Antifraud.API/Antifraud.API.csproj
@@ -9,8 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Core" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Antifraud.Common\Antifraud.Common.csproj" />
+    <ProjectReference Include="..\Antifraud.Dto\Antifraud.Dto.csproj" />
+    <ProjectReference Include="..\Antifraud.Service\Antifraud.Service.csproj" />
   </ItemGroup>
 
 </Project>
