--- a/src/Antifraud.API/Antifraud.Worker/Antifraud.Worker.csproj
+++ b/src/Antifraud.API/Antifraud.Worker/Antifraud.Worker.csproj
@@ -1,21 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>dotnet-Antifraud.Worker-a18e09d6-b1bc-46b1-91b6-4ec239842779</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Antifraud.Common\Antifraud.Common.csproj" />
-    <ProjectReference Include="..\Antifraud.Dto\Antifraud.Dto.csproj" />
     <ProjectReference Include="..\Antifraud.Service\Antifraud.Service.csproj" />
   </ItemGroup>
-
 </Project>
