Actualización de servicios. - Se actualiza docker-compose - Se actualizan dockerfiles de cada proyecto y worker - Creación de pruebas para repository layer

--- a/src/Antifraud.API/Antifraud.Repository/Antifraud.Repository.csproj
+++ b/src/Antifraud.API/Antifraud.Repository/Antifraud.Repository.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Antifraud.Model\Antifraud.Model.csproj" />
-    <ProjectReference Include="..\Antrifraud.Core.Repository\Antifraud.Core.Repository.csproj" />
+    <ProjectReference Include="..\Antifraud.Core.Repository\Antifraud.Core.Repository.csproj" />
   </ItemGroup>
 
 </Project>
