--- a/src/Antifraud.API/Transaction.API/Dockerfile
+++ b/src/Antifraud.API/Transaction.API/Dockerfile
@@ -1,36 +1,35 @@
-# Consulte https://aka.ms/customizecontainer para aprender a personalizar su contenedor de depuración y cómo Visual Studio usa este Dockerfile para compilar sus imágenes para una depuración más rápida.
-
-# Esta fase se usa cuando se ejecuta desde VS en modo rápido (valor predeterminado para la configuración de depuración)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
-WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
 
 
-# Esta fase se usa para compilar el proyecto de servicio
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["Transaction.Api/Transaction.Api.csproj", "Transaction.Api/"]
-COPY ["Antifraud.Service/Antifraud.Service.csproj", "Antifraud.Service/"]
-COPY ["Antifraud.Common/Antifraud.Common.csproj", "Antifraud.Common/"]
-COPY ["Antifraud.Dto/Antifraud.Dto.csproj", "Antifraud.Dto/"]
-COPY ["Antifraud.Model/Antifraud.Model.csproj", "Antifraud.Model/"]
-COPY ["Antifraud.Repository/Antifraud.Repository.csproj", "Antifraud.Repository/"]
-COPY ["Antrifraud.Core.Repository/Antifraud.Core.Repository.csproj", "Antrifraud.Core.Repository/"]
-RUN dotnet restore "./Transaction.Api/Transaction.Api.csproj"
-COPY . .
-WORKDIR "/src/Transaction.Api"
-RUN dotnet build "./Transaction.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Esta fase se usa para publicar el proyecto de servicio que se copiará en la fase final.
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Transaction.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
-# Esta fase se usa en producción o cuando se ejecuta desde VS en modo normal (valor predeterminado cuando no se usa la configuración de depuración)
-FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+
+COPY *.sln .
+COPY Transaction.Api/*.csproj ./Transaction.Api/
+COPY Antifraud.Common/*.csproj ./Antifraud.Common/
+COPY Antifraud.Dto/*.csproj ./Antifraud.Dto/
+COPY Antifraud.Service/*.csproj ./Antifraud.Service/
+COPY Antifraud.Model/*.csproj ./Antifraud.Model/
+COPY Antifraud.Repository/*.csproj ./Antifraud.Repository/
+COPY Antifraud.Core.Repository/*.csproj ./Antifraud.Core.Repository/
+
+RUN dotnet restore Transaction.Api/Transaction.API.csproj
+
+COPY Transaction.Api/. ./Transaction.Api/
+COPY Antifraud.Common/. ./Antifraud.Common/
+COPY Antifraud.Dto/. ./Antifraud.Dto/
+COPY Antifraud.Service/. ./Antifraud.Service/
+COPY Antifraud.Model/. ./Antifraud.Model/
+COPY Antifraud.Repository/. ./Antifraud.Repository/
+COPY Antifraud.Core.Repository/. ./Antifraud.Core.Repository/
+
+RUN dotnet build -c Release Transaction.Api/Transaction.API.csproj
+
+RUN dotnet publish Transaction.Api/Transaction.API.csproj -c Release -o /app/publish
+
+# Etapa final (asp)
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
+WORKDIR /app
+COPY --from=build /app/publish . 
+EXPOSE 80
 ENTRYPOINT ["dotnet", "Transaction.API.dll"]
