--- a/src/Antifraud.API/Transaction.API/appsettings.Development.json
+++ b/src/Antifraud.API/Transaction.API/appsettings.Development.json
@@ -1,8 +1,19 @@
 {
+  "AppSettings": {
+    "DBConnection": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=antifraud;"
+  },
+  "KafkaSettings": {
+    "BootstrapServers": "localhost:9092",
+    "GroupId": "transaction-consumer-group-debug",
+    "TransactionsTopic": "transactions-debug",
+    "ConfirmationTopic": "transactions-confirmed-debug",
+    "AutoOffsetReset": "Earliest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
