--- a/src/Antifraud.API/Transaction.Worker/Dockerfile
+++ b/src/Antifraud.API/Transaction.Worker/Dockerfile
@@ -3,7 +3,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
 COPY *.sln .
-COPY Antifraud.Worker/*.csproj ./Antifraud.Worker/
+COPY Transaction.Worker/*.csproj ./Transaction.Worker/
 COPY Antifraud.Common/*.csproj ./Antifraud.Common/
 COPY Antifraud.Dto/*.csproj ./Antifraud.Dto/
 COPY Antifraud.Service/*.csproj ./Antifraud.Service/
@@ -11,9 +11,9 @@ COPY Antifraud.Model/*.csproj ./Antifraud.Model/
 COPY Antifraud.Repository/*.csproj ./Antifraud.Repository/
 COPY Antifraud.Core.Repository/*.csproj ./Antifraud.Core.Repository/
 
-RUN dotnet restore Antifraud.Worker/Antifraud.Worker.csproj
+RUN dotnet restore Transaction.Worker/Transaction.Worker.csproj
 
-COPY Antifraud.Worker/. ./Antifraud.Worker/
+COPY Transaction.Worker/. ./Transaction.Worker/
 COPY Antifraud.Common/. ./Antifraud.Common/
 COPY Antifraud.Dto/. ./Antifraud.Dto/
 COPY Antifraud.Service/. ./Antifraud.Service/
@@ -21,12 +21,12 @@ COPY Antifraud.Model/. ./Antifraud.Model/
 COPY Antifraud.Repository/. ./Antifraud.Repository/
 COPY Antifraud.Core.Repository/. ./Antifraud.Core.Repository/
 
-RUN dotnet build -c Release Antifraud.Worker/Antifraud.Worker.csproj
+RUN dotnet build -c Release Transaction.Worker/Transaction.Worker.csproj
 
-RUN dotnet publish Antifraud.Worker/Antifraud.Worker.csproj -c Release -o /app/publish
+RUN dotnet publish Transaction.Worker/Transaction.Worker.csproj -c Release -o /app/publish
 
 # Etapa final (asp)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
 COPY --from=build /app/publish . 
-ENTRYPOINT ["dotnet", "Antifraud.Worker.dll"]
+ENTRYPOINT ["dotnet", "Transaction.Worker.dll"]
