--- a/src/Antifraud.API/Transaction.Worker/appsettings.json
+++ b/src/Antifraud.API/Transaction.Worker/appsettings.json
@@ -6,8 +6,7 @@
     "BootstrapServers": "kafka:29092",
     "GroupId": "transaction-consumer-group",
     "TransactionsTopic": "transactions",
-    "ConfirmationTopic": "transactions-confirmed",
-    "AutoOffsetReset": "Earliest"
+    "ConfirmationTopic": "transactions-confirmed"
   },
   "Logging": {
     "LogLevel": {
