--- a/src/Antifraud.API/Transaction.API/appsettings.json
+++ b/src/Antifraud.API/Transaction.API/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AppSettings": {
-    "DBConnection": "Host=postgres;Port=5432;Username=postgres;Password=postgres;Database=postgres"
+    "DBConnection": "Host=postgres;Port=5432;Username=postgres;Password=postgres;Database=antifraud;"
   },
   "KafkaSettings": {
-    "BootstrapServers": "localhost:9092",
+    "BootstrapServers": "kafka:29092",
     "GroupId": "transaction-consumer-group",
     "TransactionsTopic": "transactions",
     "ConfirmationTopic": "transactions-confirmed",
