--- a/src/Antifraud.API/Transaction.API/Dockerfile
+++ b/src/Antifraud.API/Transaction.API/Dockerfile
@@ -5,7 +5,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
 COPY *.sln .
-COPY Transaction.Api/*.csproj ./Transaction.Api/
+COPY Transaction.API/*.csproj ./Transaction.API/
 COPY Antifraud.Common/*.csproj ./Antifraud.Common/
 COPY Antifraud.Dto/*.csproj ./Antifraud.Dto/
 COPY Antifraud.Service/*.csproj ./Antifraud.Service/
@@ -13,9 +13,9 @@ COPY Antifraud.Model/*.csproj ./Antifraud.Model/
 COPY Antifraud.Repository/*.csproj ./Antifraud.Repository/
 COPY Antifraud.Core.Repository/*.csproj ./Antifraud.Core.Repository/
 
-RUN dotnet restore Transaction.Api/Transaction.API.csproj
+RUN dotnet restore Transaction.API/Transaction.API.csproj
 
-COPY Transaction.Api/. ./Transaction.Api/
+COPY Transaction.API/. ./Transaction.API/
 COPY Antifraud.Common/. ./Antifraud.Common/
 COPY Antifraud.Dto/. ./Antifraud.Dto/
 COPY Antifraud.Service/. ./Antifraud.Service/
@@ -23,9 +23,9 @@ COPY Antifraud.Model/. ./Antifraud.Model/
 COPY Antifraud.Repository/. ./Antifraud.Repository/
 COPY Antifraud.Core.Repository/. ./Antifraud.Core.Repository/
 
-RUN dotnet build -c Release Transaction.Api/Transaction.API.csproj
+RUN dotnet build -c Release Transaction.API/Transaction.API.csproj
 
-RUN dotnet publish Transaction.Api/Transaction.API.csproj -c Release -o /app/publish
+RUN dotnet publish Transaction.API/Transaction.API.csproj -c Release -o /app/publish
 
 # Etapa final (asp)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
